comentario de ajuste

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 	<body>
 		<h1> clasegit </h1>
+ 		<p> esta es la modificacion de mi pagina web para 
+validar <h2> git </h2> y mi version </p>
 		
 	</body>
 
